--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <nav>
     <div class="logo">MyWebsite</div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact Us</a></li>
     </ul>
     <div class="auth-buttons">
       <a href="register0.html" class="btn">Get started now</a>
@@ -25,11 +25,60 @@
   <section id="home" class="section">
     <h1>Welcome to MyWebsite</h1>
     <p>Your one-stop solution for all your needs.</p>
-    <a href="services.html" class="btn">Explore Services</a>
+    <a href="#services" class="btn">Explore Services</a>
+  </section>
+
+  <section id="about" class="section">
+    <h2>About Us</h2>
+    <p>We are a team of professionals dedicated to providing the best services to our clients. With years of experience in the industry, we strive to deliver excellence in everything we do.</p>
+    <h3>Our Mission</h3>
+    <p>Our mission is to empower businesses with innovative solutions that drive growth and success.</p>
+    <h3>Our Vision</h3>
+    <p>To be the leading provider of high-quality services globally.</p>
+  </section>
+
+  <section id="services" class="section">
+    <h2>Our Services</h2>
+    <div class="service-list">
+      <div class="service-item">
+        <h3>Web Development</h3>
+        <p>We create responsive and user-friendly websites tailored to your business needs.</p>
+      </div>
+      <div class="service-item">
+        <h3>Digital Marketing</h3>
+        <p>Boost your online presence with our SEO, social media, and PPC campaigns.</p>
+      </div>
+      <div class="service-item">
+        <h3>Graphic Design</h3>
+        <p>We design stunning visuals that leave a lasting impression.</p>
+      </div>
+      <div class="service-item">
+        <h3>Consulting</h3>
+        <p>Get expert advice to grow your business and achieve your goals.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <p>Have questions or need assistance? Reach out to us!</p>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
+    <div class="contact-info">
+      <h3>Our Office</h3>
+      <p>123 Main Street, City, Country</p>
+      <p>Email: info@mywebsite.com</p>
+      <p>Phone: +91 1234567890</p>
+    </div>
   </section>
 
   <footer>
     <p>&copy; 2025 MyWebsite. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
